Fixed ul alignment

--- a/ape_vs_ape/style.css
+++ b/ape_vs_ape/style.css
@@ -18,6 +18,7 @@ a:hover {
 
 ul {
   list-style: none;
+  text-align: left;
 }
 
 ul.contacts {
